--- a/api/templates/carrito.html
+++ b/api/templates/carrito.html
@@ -139,7 +139,7 @@
         <div class="row">
           <div class="col-lg-8 offset-lg-2 text-center">
             <div class="breadcrumb-text">
-              <p>La favorita</p>
+              <p>Futboshop LGBT+Q</p>
               <h1>Carrito de compras</h1>
             </div>
           </div>
